--- a/UF1/MP08UF1010_retrat/css/estils.css
+++ b/UF1/MP08UF1010_retrat/css/estils.css
@@ -1,31 +1,5 @@
-h1{
-  text-align: center;
-  font-size: 25px;
-  line-height: 30px;
-  padding-top: 5px;
-  color: red;
-  font-family: helvetica, arial, sans-serif;;
-  animation-name: moviment;
-  animation-duration: 2s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-}
-
-.info{
-  background-image: linear-gradient(#5C5B58, #9E9E9E, #FEFEFE, #BDBDBE, #707071, #535455);
-  border-image: -webkit-radial-gradient(#535455, #707071, #BDBDBE, #FEFEFE, #9E9E9E, #5C5B58) 1 10;
-  width: 200px;
-  height: 100px;
-  position: absolute;
-  top: 500px;
-  border-radius: 50px;
-}
-
-@keyframes moviment{
-  0% {filter: opacity(0%); text-shadow: 0 0 0; red}
-  50% {filter: opacity(50%); text-shadow: 0 0 0.2em red, 0 0 0.2em red}
-  99% {filter: opacity(100%); text-shadow: 0 0 0.2em red, 0 0 0.2em red}
-  100% {filter: opacity(0%); text-shadow: 0 0 0.2em red, 0 0 0.2em red}
+.quadrat{
+   position: relative;
 }
 
 .cap{
@@ -44,7 +18,10 @@ h1{
 }
 
 .celles{
-  z-index: -50000000000000000;
+  position: absolute;
+  z-index: 1;
+  top: -300px;
+  left: -1px;
 }
 
 .partu{
@@ -87,7 +64,6 @@ h1{
 .barbeta{
   width: 0px;
   height: 0px;
-  background-color:  ;
   margin: 80px 0 0 20px;
   border: solid 300px #fdddca;
   border-right-color: transparent;
@@ -165,6 +141,13 @@ h1{
   margin-top: 50px;
 }
 
+.orelles{
+  background-color: blue;
+  position: absolute;
+  top: -280px;
+  left: 0;
+}
+
 .orellaesquerra{
   width: 100px;
   height: 200px;
@@ -220,6 +203,13 @@ h1{
   top: 40px;
   left: 0px;
   margin-left: 250px;
+}
+
+.ulleres{
+  position: absolute;
+  top: -300px;
+  left: 2px;
+
 }
 
 .vidres{
@@ -354,6 +344,13 @@ h1{
   z-index: 100;
 }
 
+.cabellera{
+  position: relative;
+  top: -1350px;
+  left: -300px;
+  z-index: -1;
+}
+
 .cabell{
   position: absolute;
 }
@@ -392,6 +389,13 @@ h1{
 }
 
 /* ------Barba------------*/
+
+.beard{
+  position: absolute;
+  top: -300px;
+  left: -8px;
+}
+
 
 .bigoti_esq{
   position: absolute;
@@ -565,60 +569,12 @@ h1{
 
 }
 
-/* ------Monstre------------*/
-
-.monstre{
-  width: 50px;
-  height: 90px;
-  background-color: #48d1cc;
-  z-index: -99999999999999999999999999999999999999999999999999999999999999999;
-  border-radius: 50px 50px 35px 35px;
-  animation-name: monstre;
-  animation-duration: 15s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-  filter: opacity(10%);
-}
-
-.um1{
-  width: 40px;
-  height: 40px;
-  background-color: white;
-  border-radius: 50%;
-  margin-left: 5px;
-  margin-top: 20px;
-  transform: translateY(10px)
-}
-
-.um2{
-  width: 20px;
-  height: 20px;
-  background-color: purple;
-  border-radius: 50%;
-  margin-top: 20px;
-  transform: translateY(10px) translateX(10px);
-}
-
-.bm1{
-  width: 28px;
-  height: 5px;
-  background-color: white;
-  margin: 20px 0 0 10px;
-}
-
-@keyframes monstre{
- 0%{transform: translateY(10px) translateX(10px);}
- 20%{transform: translateY(-800px) translateX(0px);}
- 45%{transform: translateY(-800px) translateX(1000px);}
- 65%{transform: translateY(-600px) translateX(900px);}
- 80%{transform: translateY(-400px) translateX(1000px);}
- 90%{transform: translateY(-100px) translateX(900px);}
- 100%{transform: translateY(10px) translateX(10px);}
-}
-
 /* ------Braç------------*/
 .braç{
-  margin: -200px 0 0 100px;
+  position: absolute;
+  top: 650px;
+  left: 25px;
+  margin: -90px 0 0 100px;
   transform: rotate(30deg);
 }
 
