--- a/WEBYOUWE/activitat.css
+++ b/WEBYOUWE/activitat.css
@@ -1,5 +1,16 @@
-h1{
+html {
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
+  font-size: 1rem;
+}
+
+body{
+  margin:0;
   font-family: 'Montserrat', sans-serif;
+}
+
+h1{
   font-size: 2rem;
   color: #000018;
   line-height: 1.2rem;
@@ -7,14 +18,12 @@ h1{
 }
 
 h2{
-  font-family: 'Montserrat', sans-serif;
   font-size: 0.8rem;
   text-align: center;
   color: #000018;
 }
 
 h3{
-  font-family: 'Montserrat', sans-serif;
   font-size: 0.8rem;
   text-align: center;
   font-weight: 300;
@@ -32,7 +41,7 @@ h3{
 }
 
 .contenidor{
-  float: left;
+
 }
 
 #retorna{
@@ -43,6 +52,11 @@ h3{
   background-size: contain;
   background-position: center;
   margin-top: 1rem;
+  float: left;
+}
+
+#text {
+  float: left;
 }
 
 /*-----GRAFICA-----*/
@@ -111,7 +125,7 @@ box-shadow: inset 0px -19px 14px 22px rgba(255,255,255,1);
 
 .barra{
   width: 100%;
-  height: 6.5rem;
+  height: 4.5rem;
   margin: 0 auto;
   background-color: #19D3C5;
   border-radius: 25px 25px 0 0;
@@ -127,7 +141,7 @@ box-shadow: inset 0px -19px 14px 22px rgba(255,255,255,1);
 .simbol{
   width: 2rem;
   height: 2rem;
-  margin-top: 2rem;
+  margin-top: 1rem;
   margin-left: 2rem;
   display: inline-block;
 }
@@ -172,10 +186,9 @@ box-shadow: inset 0px -19px 14px 22px rgba(255,255,255,1);
   background-size: cover;
 }
 
-@media screen and  (min-width: 1200px){
+@media screen and (min-width: 1200px){
 
   h1{
-    font-family: 'Montserrat', sans-serif;
     font-size: 2rem;
     color: #000018;
     line-height: 1.2rem;
@@ -183,14 +196,12 @@ box-shadow: inset 0px -19px 14px 22px rgba(255,255,255,1);
   }
 
   h2{
-    font-family: 'Montserrat', sans-serif;
     font-size: 0.8rem;
     text-align: center;
     color: #000018;
   }
 
   h3{
-    font-family: 'Montserrat', sans-serif;
     font-size: 0.8rem;
     text-align: center;
     font-weight: 300;
@@ -291,13 +302,13 @@ box-shadow: inset 0px -19px 14px 22px rgba(255,255,255,1);
 
   .barra{
     width: 100%;
-    height: 6.5rem;
+    height: 4.5rem;
     margin: 0 auto;
     background-color: #19D3C5;
     border-radius: 25px 25px 0 0;
-    position: absolute;
+    position: fixed;
     left: 0;
-    bottom: 0rem;
+    bottom: 0;
     box-shadow: 0px 20px 53px -2px rgba(0,0,0,0.75);
     -webkit-box-shadow: 0px 20px 53px -2px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 20px 53px -2px rgba(0,0,0,0.75);
@@ -307,7 +318,7 @@ box-shadow: inset 0px -19px 14px 22px rgba(255,255,255,1);
   .simbol{
     width: 2rem;
     height: 2rem;
-    margin-top: 2rem;
+    margin-top: 1rem;
     margin-left: 2rem;
     display: inline-block;
   }
