--- a/WEBYOUWE/bustia.css
+++ b/WEBYOUWE/bustia.css
@@ -1,6 +1,14 @@
-body{
-  overflow-y: hidden;
+html {
+  width: 100vw;
+  height: 100vh;
   overflow-x: hidden;
+  overflow-y: hidden;
+  font-size: 1rem;
+}
+
+body{
+  margin:0;
+  font-family: 'Montserrat', sans-serif;
 }
 
 h1{
@@ -32,7 +40,7 @@ h3{
 
 .pagina{
   margin: 0 auto;
-  width: 32rem;
+  width: 30rem;
   height: auto;
 }
 
@@ -110,7 +118,7 @@ h3{
 
 .barra{
   width: 100%;
-  height: 6.5rem;
+  height: 4.5rem;
   margin: 0 auto;
   background-color: #19D3C5;
   border-radius: 25px 25px 0 0;
@@ -126,7 +134,7 @@ h3{
 .simbol{
   width: 2rem;
   height: 2rem;
-  margin-top: 2rem;
+  margin-top: 1rem;
   margin-left: 2rem;
   display: inline-block;
 }
@@ -520,13 +528,13 @@ h3{
 
   .barra{
     width: 100%;
-    height: 6.5rem;
+    height: 4.5rem;
     margin: 0 auto;
     background-color: #19D3C5;
     border-radius: 25px 25px 0 0;
-    position: absolute;
+    position: fixed;
     left: 0;
-    bottom: 0rem;
+    bottom: 0;
     box-shadow: 0px 20px 53px -2px rgba(0,0,0,0.75);
     -webkit-box-shadow: 0px 20px 53px -2px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 20px 53px -2px rgba(0,0,0,0.75);
@@ -536,7 +544,7 @@ h3{
   .simbol{
     width: 2rem;
     height: 2rem;
-    margin-top: 2rem;
+    margin-top: 1rem;
     margin-left: 2rem;
     display: inline-block;
   }
