--- a/WEBYOUWE/chat.css
+++ b/WEBYOUWE/chat.css
@@ -1,5 +1,18 @@
-h1{
+html {
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
+  margin: 0;
+  font-size: 1rem;
+}
+
+body{
+  position: relative;
+  margin:0;
   font-family: 'Montserrat', sans-serif;
+}
+
+h1{
   color: #000018;
   font-size: 0.9rem;
   margin-left: 1rem;
@@ -9,7 +22,6 @@ h1{
 }
 
 h2{
-  font-family: 'Montserrat', sans-serif;
   color: #000018;
   font-size: 0.6rem;
   margin-right: 1.3rem;
@@ -23,7 +35,6 @@ h3{
   margin-left: 0.5rem;
   color: white;
   font-size: 1.2rem;
-  font-family: 'Montserrat', sans-serif;
   line-height: 1rem;
 }
 
@@ -34,17 +45,23 @@ h3{
 
 /*------BARRA SUPERIOR------*/
 
-.pagina{
+.pagina {
   margin: 0 auto;
   width: 30rem;
-  height: auto;
+  height: 100vh;
+  padding-top: 6rem;
 }
 
 .superior{
-  width: 30rem;
+  width: ;
   height: 4.125rem;
-  margin-top: 1.938rem;
+  margin-top: 0;
   margin-bottom: 2rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: white;
 }
 
 #icono{
@@ -140,7 +157,10 @@ h3{
   width: 30rem;
   height: 3.188rem;
   border-radius: 50px;
-  margin-top: 10rem;
+  margin-top: 5rem;
+  position: fixed;
+  bottom: 5rem;
+
 }
 
 .esquerra{
@@ -177,7 +197,8 @@ h3{
 
 .barra{
   width: 100%;
-  height: 6.5rem;
+  height: 4.5rem;
+  margin: 0 auto;
   background-color: #19D3C5;
   border-radius: 25px 25px 0 0;
   position: fixed;
@@ -186,6 +207,7 @@ h3{
   box-shadow: 0px 20px 53px -2px rgba(0,0,0,0.75);
   -webkit-box-shadow: 0px 20px 53px -2px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 20px 53px -2px rgba(0,0,0,0.75);
+  text-align: center;
 }
 
 .centre{
@@ -196,8 +218,8 @@ h3{
   width: 2rem;
   height: 2rem;
   float: left;
-  margin-top: 2.313rem;
-  margin-left: 3.2rem;
+  margin-top: 1rem;
+  margin-left: 2.2rem;
 }
 
 .icon:hover{
