--- a/WEBYOUWE/compte.css
+++ b/WEBYOUWE/compte.css
@@ -1,3 +1,15 @@
+html {
+  width: 100vw;
+  overflow-x: hidden;
+  font-size: 1rem;
+}
+
+body{
+  height: 100%;
+  margin:0;
+  font-family: 'Montserrat', sans-serif;
+}
+
 h1{
   color: #000018;
   opacity: 40%;
