--- a/WEBYOUWE/filtres.css
+++ b/WEBYOUWE/filtres.css
@@ -1,3 +1,15 @@
+html {
+  width: 100vw;
+  overflow-x: hidden;
+  font-size: 1rem;
+}
+
+body{
+  height: 100%;
+  margin:0;
+  font-family: 'Montserrat', sans-serif;
+}
+
 h1{
   font-family: 'Montserrat', sans-serif;
   font-size: 2rem;
@@ -43,7 +55,7 @@ a{
 }
 
 .pagina{
-  width: 30rem;
+  width: 90%;
   margin: 0 auto;
 }
 
@@ -69,7 +81,6 @@ a{
 /*-----FILTRE-----*/
 
 .barra{
-  width: 30rem;
   height: 3rem;
   background-color: #C3FFFF;
   border-radius: 50px;
@@ -149,7 +160,7 @@ a{
 /*-----CONFIRMACIO-----*/
 
 .confirmacio{
-  width: 30rem;
+  width: 100%;
   height: 4.1rem;
   margin: 0 auto;
   margin-top: 11rem;
@@ -161,7 +172,8 @@ a{
     background-color: #19D3C5;
     float: right;
     border-radius: 50px;
-    margin-right: 15%;
+    position: relative;
+    left: 0;
 }
 
 .capsa:hover{
@@ -179,8 +191,12 @@ a{
 #cancelar{
   background-color: transparent;
   opacity: 40%;
+  float: left;
+  position: relative;
+  left: 2rem;
+  right: 0;
 }
 
 #cancelar:hover{
-  background-color: transparent
+  background-color: transparent;
 }
