--- a/WEBYOUWE/noupost.css
+++ b/WEBYOUWE/noupost.css
@@ -1,5 +1,13 @@
-body{
+html {
+  width: 100vw;
+  height: 100vh;
   overflow-x: hidden;
+  font-size: 1rem;
+}
+
+body{
+  margin:0;
+  font-family: 'Montserrat', sans-serif;
 }
 
 h1{
@@ -85,7 +93,7 @@ a{
   margin: auto;
   height: 32rem;
   position: absolute;
-  top: 17rem;
+  top: 13rem;
   z-index: 999;
   background-color: #C3FFFF;
   border-radius: 12%;
@@ -280,7 +288,7 @@ a{
 
 .barra{
   width: 100%;
-  height: 6.5rem;
+  height: 4.5rem;
   margin: 0 auto;
   background-color: #19D3C5;
   border-radius: 25px 25px 0 0;
@@ -297,7 +305,7 @@ a{
 .simbol{
   width: 2rem;
   height: 2rem;
-  margin-top: 2rem;
+  margin-top: 1rem;
   margin-left: 2rem;
   display: inline-block;
 }
@@ -618,13 +626,13 @@ a{
 
   .barra{
     width: 100%;
-    height: 6.5rem;
+    height: 4.5rem;
     margin: 0 auto;
     background-color: #19D3C5;
     border-radius: 25px 25px 0 0;
-    position: absolute;
+    position: fixed;
     left: 0;
-    bottom: 0rem;
+    bottom: 0;
     box-shadow: 0px 20px 53px -2px rgba(0,0,0,0.75);
     -webkit-box-shadow: 0px 20px 53px -2px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 20px 53px -2px rgba(0,0,0,0.75);
@@ -635,7 +643,7 @@ a{
   .simbol{
     width: 2rem;
     height: 2rem;
-    margin-top: 2rem;
+    margin-top: 1rem;
     margin-left: 2rem;
     display: inline-block;
   }
