--- a/WEBYOUWE/perfil.css
+++ b/WEBYOUWE/perfil.css
@@ -1,3 +1,15 @@
+html {
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
+  font-size: 1rem;
+}
+
+body{
+  margin:0;
+  font-family: 'Montserrat', sans-serif;
+}
+
 h1{
   font-family: 'Montserrat', sans-serif;
   font-size: 2rem;
@@ -136,7 +148,7 @@ h3{
 
 .barra{
   width: 100%;
-  height: 6.5rem;
+  height: 4.5rem;
   margin: 0 auto;
   background-color: #19D3C5;
   border-radius: 25px 25px 0 0;
@@ -152,7 +164,7 @@ h3{
 .simbol{
   width: 2rem;
   height: 2rem;
-  margin-top: 2rem;
+  margin-top: 1rem;
   margin-left: 2rem;
   display: inline-block;
 }
