--- a/WEBYOUWE/posts.css
+++ b/WEBYOUWE/posts.css
@@ -1,5 +1,13 @@
+html {
+  width: 100vw;
+  overflow-x: hidden;
+  font-size: 1rem;
+}
+
 body{
-  overflow: hidden;
+  height: 100%;
+  margin:0;
+  font-family: 'Montserrat', sans-serif;
 }
 
 h1{
@@ -58,6 +66,11 @@ h6{
   background-image: url(img/crear.svg);
   background-repeat: no-repeat;
   background-size: cover;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 10.5rem;
+  z-index: 99999999999999999999999999999999999999999999999999999999999999999999999;
 }
 
 .crear:hover{
@@ -219,7 +232,7 @@ h6{
 
 .barra{
   width: 100%;
-  height: 6.5rem;
+  height: 4.5rem;
   margin: 0 auto;
   background-color: #19D3C5;
   border-radius: 25px 25px 0 0;
@@ -235,7 +248,7 @@ h6{
 .simbol{
   width: 2rem;
   height: 2rem;
-  margin-top: 2rem;
+  margin-top: 1rem;
   margin-left: 2rem;
   display: inline-block;
 }
@@ -562,13 +575,13 @@ h6{
 
   .barra{
     width: 100%;
-    height: 6.5rem;
+    height: 4.5rem;
     margin: 0 auto;
     background-color: #19D3C5;
     border-radius: 25px 25px 0 0;
-    position: absolute;
+    position: fixed;
     left: 0;
-    bottom: 0rem;
+    bottom: 0;
     box-shadow: 0px 20px 53px -2px rgba(0,0,0,0.75);
     -webkit-box-shadow: 0px 20px 53px -2px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 20px 53px -2px rgba(0,0,0,0.75);
@@ -578,7 +591,7 @@ h6{
   .simbol{
     width: 2rem;
     height: 2rem;
-    margin-top: 2rem;
+    margin-top: 1rem;
     margin-left: 2rem;
     display: inline-block;
   }
